tests/error/call_dynamic_expression.bz
// error: allocation was never freed
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		({ __builtin_comptime_malloc(i32, 1); test1 })();
	});
}

function test1()
{
}
